fix: fix basic markup

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 <main>
   <section class="hero">
     <div class="container hero__container">
-      <h1 class="hero__title">Найди работу</h1>
-      <span class="blue-text">своей мечты</span>
+      <h1 class="hero__title">Найди работу <span class="blue-text">своей мечты</span></h1>
     </div>
   </section>
   <div class="vacancies" id="vacancies">
