--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
   <title>Work Space</title>
 
   <link rel="stylesheet" href="./src/styles/normalize.css">
+  <link rel="stylesheet" href="./src/styles/choices.min.css">
   <link rel="stylesheet" href="./src/styles/style.css">
+  <link rel="stylesheet" href="./src/styles/header.css">
+  <link rel="stylesheet" href="./src/styles/hero.css">
+  <link rel="stylesheet" href="./src/styles/filter.css">
+  <link rel="stylesheet" href="./src/styles/cards.css">
+  <link rel="stylesheet" href="./src/styles/vacancies.css">
+  <link rel="stylesheet" href="./src/styles/vacancy.css">
+  <link rel="stylesheet" href="./src/styles/checkbox.css">
+  <link rel="stylesheet" href="./src/styles/footer.css">
+  <link rel="stylesheet" href="./src/styles/choices.css">
 
+  <script src="./src/scripts/choices.min.js" defer></script>
+  <script src="./src/scripts/script.js" defer></script>
 
 </head>
 <body>
 
-<header>
+<header class="header">
   <div class="container header__container">
     <img class="header__logo" src="./src/images/logo.svg" alt="logo Work Space">
     <a href="#vacancies" class="header__link">Посмотреть вакансии</a>
@@ -27,8 +39,10 @@
   </section>
   <div class="vacancies" id="vacancies">
     <div class="container vacancies__container">
+      <button class="vacancies__filter-button">Фильтр</button>
+
       <section class="vacancies__filter filter">
-        <h2 class="filter__title"></h2>
+        <h2 class="filter__title">Фильтр</h2>
         <form class="filter__form">
           <fieldset class="filter__fieldset">
             <legend class="filter__legend">Город</legend>
@@ -55,56 +69,56 @@
               <legend class="filter__legend">Формат</legend>
               
               <label class="filter__label checkbox">
-                <input type="checkbox" name="format" value="Офис" class="checkbox__input">
-              </label>Офис
+                <input type="checkbox" name="format" value="Офис" class="checkbox__input">Офис
+              </label>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="format" value="Удаленный" class="checkbox__input">
-              </label>Удаленный
+                <input type="checkbox" name="format" value="Удаленный" class="checkbox__input">Удаленный
+              </label>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="format" value="Гибкий" class="checkbox__input">
-              </label>Гибкий
+                <input type="checkbox" name="format" value="Гибкий" class="checkbox__input">Гибкий
+              </label>
             </fieldset>
 
             <fieldset class="filter__fieldset">
               <legend class="filter__legend">Опыт работы</legend>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="experience" value="Опыт не важен" class="checkbox__input">
-              </label>Опыт не важен
+                <input type="checkbox" name="experience" value="Опыт не важен" class="checkbox__input">Опыт не важен
+              </label>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="experience" value="Без опыта" class="checkbox__input">
-              </label>Без опыта
+                <input type="checkbox" name="experience" value="Без опыта" class="checkbox__input">Без опыта
+              </label>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="experience" value="От 1 года до 3-х лет" class="checkbox__input">
-              </label>От 1 года до 3-х лет
+                <input type="checkbox" name="experience" value="От 1 года до 3-х лет" class="checkbox__input">От 1 года до 3-х лет
+              </label>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="experience" value="От 3-х лет" class="checkbox__input">
-              </label>От 3-х лет
+                <input type="checkbox" name="experience" value="От 3-х лет" class="checkbox__input">От 3-х лет
+              </label>
             </fieldset>
 
             <fieldset class="filter__fieldset">
               <legend class="filter__legend">Занятость</legend>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="type" value="Полная занятость" class="checkbox__input">
-              </label>Полная занятость
+                <input type="checkbox" name="type" value="Полная занятость" class="checkbox__input">Полная занятость
+              </label>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="type" value="Частичная занятость" class="checkbox__input">
-              </label>Частичная занятость
+                <input type="checkbox" name="type" value="Частичная занятость" class="checkbox__input">Частичная занятость
+              </label>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="type" value="Стажировка" class="checkbox__input">
-              </label>Стажировка
+                <input type="checkbox" name="type" value="Стажировка" class="checkbox__input">Стажировка
+              </label>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="type" value="Проектная работа" class="checkbox__input">
-              </label>Проектная работа
+                <input type="checkbox" name="type" value="Проектная работа" class="checkbox__input">Проектная работа
+              </label>
             </fieldset>
           </div>
 
@@ -145,6 +159,19 @@
               </ul>
             </article>
           </li>
+          <li class="cards__item">
+            <article class="vacancy" tabindex="0">
+              <img class="vacancy__img" src="./src/images/yadro.svg" alt="logo YADRO">
+              <p class="vacancy__company">YADRO</p>
+              <h3 class="vacancy__title">Инженер</h3>
+              <ul class="vacancy__fields">
+                <li class="vacancy__field">от 150 000₽</li>
+                <li class="vacancy__field">полная занятость</li>
+                <li class="vacancy__field">офис</li>
+                <li class="vacancy__field">опыт от 3-х лет</li>
+              </ul>
+            </article>
+          </li>
         </ul>
       </section>
     </div>
@@ -154,7 +181,7 @@
 
 <footer class="footer">
   <div class="container footer__container">
-    <img src="./src/images/logo-footer.svg" alt="logo-footer" class="logo Work Space">
+    <img src="./src/images/logo-footer.svg" alt="logo Work Space" class="footer__logo">
     <p class="footer__copyright">© Work Space, 2023</p>
 
   <ul class="footer__contacts">
