--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="./src/styles/checkbox.css">
   <link rel="stylesheet" href="./src/styles/footer.css">
   <link rel="stylesheet" href="./src/styles/choices.css">
+  <link rel="stylesheet" href="./src/styles/modal.css">
+  <link rel="stylesheet" href="./src/styles/detail.css">
 
   <script src="./src/scripts/choices.min.js" defer></script>
   <script src="./src/scripts/script.js" defer></script>
@@ -64,7 +66,7 @@
           <div class="filter__checkboxes">
             <fieldset class="filter__fieldset">
               <legend class="filter__legend">Формат</legend>
-              
+
               <label class="filter__label checkbox">
                 <input type="checkbox" name="format" value="Офис" class="checkbox__input">Офис
               </label>
@@ -90,7 +92,8 @@
               </label>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="experience" value="От 1 года до 3-х лет" class="checkbox__input">От 1 года до 3-х лет
+                <input type="checkbox" name="experience" value="От 1 года до 3-х лет" class="checkbox__input">От 1 года
+                до 3-х лет
               </label>
 
               <label class="filter__label checkbox">
@@ -106,7 +109,8 @@
               </label>
 
               <label class="filter__label checkbox">
-                <input type="checkbox" name="type" value="Частичная занятость" class="checkbox__input">Частичная занятость
+                <input type="checkbox" name="type" value="Частичная занятость" class="checkbox__input">Частичная
+                занятость
               </label>
 
               <label class="filter__label checkbox">
@@ -130,45 +134,7 @@
         <h2 class="cards__title visually-hidden">Список вакансий</h2>
 
         <ul class="cards__list">
-          <li class="cards__item">
-            <article class="vacancy" tabindex="0">
-              <img class="vacancy__img" src="./src/images/yadro.svg" alt="logo YADRO">
-              <p class="vacancy__company">YADRO</p>
-              <h3 class="vacancy__title">Инженер</h3>
-              <ul class="vacancy__fields">
-                <li class="vacancy__field">от 150 000₽</li>
-                <li class="vacancy__field">полная занятость</li>
-                <li class="vacancy__field">офис</li>
-                <li class="vacancy__field">опыт от 3-х лет</li>
-              </ul>
-            </article>
-          </li>
-          <li class="cards__item">
-            <article class="vacancy" tabindex="1">
-              <img class="vacancy__img" src="./src/images/creative-people.svg" alt="logo Creative People">
-              <p class="vacancy__company">Creative People</p>
-              <h3 class="vacancy__title">Графический дизайнер</h3>
-              <ul class="vacancy__fields">
-                <li class="vacancy__field">от 110 000₽</li>
-                <li class="vacancy__field">проектная работа</li>
-                <li class="vacancy__field">удаленный</li>
-                <li class="vacancy__field">опыт от 1 года до 3-х лет</li>
-              </ul>
-            </article>
-          </li>
-          <li class="cards__item">
-            <article class="vacancy" tabindex="0">
-              <img class="vacancy__img" src="./src/images/yadro.svg" alt="logo YADRO">
-              <p class="vacancy__company">YADRO</p>
-              <h3 class="vacancy__title">Инженер</h3>
-              <ul class="vacancy__fields">
-                <li class="vacancy__field">от 150 000₽</li>
-                <li class="vacancy__field">полная занятость</li>
-                <li class="vacancy__field">офис</li>
-                <li class="vacancy__field">опыт от 3-х лет</li>
-              </ul>
-            </article>
-          </li>
+
         </ul>
       </section>
     </div>
@@ -181,14 +147,14 @@
     <img src="./src/images/logo-footer.svg" alt="logo Work Space" class="footer__logo">
     <p class="footer__copyright">© Work Space, 2023</p>
 
-  <ul class="footer__contacts">
-    <li class="footer__contact"> Designer:
-      <a class="footer__contact-link" href="https://t.me/Alexey_Titkov">Anastasia Ilina</a>
-    </li>
-    <li class="footer__contact"> Developer:
-      <a class="footer__contact-link" href="https://t.me/Alexey_Titkov">Alexey Titkov</a>
-    </li>
-  </ul>
+    <ul class="footer__contacts">
+      <li class="footer__contact"> Designer:
+        <a class="footer__contact-link" href="https://t.me/Alexey_Titkov">Anastasia Ilina</a>
+      </li>
+      <li class="footer__contact"> Developer:
+        <a class="footer__contact-link" href="https://t.me/Alexey_Titkov">Alexey Titkov</a>
+      </li>
+    </ul>
   </div>
 </footer>
 
