feat: add hover and active effects

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
   </section>
   <div class="vacancies" id="vacancies">
     <div class="container vacancies__container">
-      <button class="vacancies__filter-button blue-text">Фильтр</button>
+      <button class="vacancies__filter-button blue-text">
+        <span>Фильтр</span>
+        <svg class="vacancies__filter-button-arrow" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M10 14L14 8H6L10 14Z" fill="currentColor"/>
+        </svg>
+      </button>
 
       <section class="vacancies__filter filter">
         <h2 class="filter__title">Фильтр</h2>
