feat: add styles employer page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <link rel="stylesheet" href="./src/styles/choices.css">
   <link rel="stylesheet" href="./src/styles/modal.css">
   <link rel="stylesheet" href="./src/styles/detail.css">
+  <link rel="stylesheet" href="./src/styles/employer.css">
+  <link rel="stylesheet" href="./src/styles/file.css">
+  <link rel="stylesheet" href="./src/styles/radio.css">
 
   <script src="./src/scripts/choices.min.js" defer></script>
   <script src="./src/scripts/script.js" defer></script>
@@ -29,7 +32,10 @@
 <header class="header">
   <div class="container header__container">
     <img class="header__logo" src="./src/images/logo.svg" alt="logo Work Space">
-    <a href="#vacancies" class="header__link">Посмотреть вакансии</a>
+    <div class="header__links">
+      <a class="header__link" href="#vacancies">Посмотреть вакансии</a>
+      <a class="header__link header__link_o" href="./employer.html">+ Добавить новую вакансию</a>
+    </div>
   </div>
 </header>
 
