--- a/employer.html
+++ b/employer.html
@@ -19,6 +19,9 @@
   <link rel="stylesheet" href="./src/styles/choices.css">
   <link rel="stylesheet" href="./src/styles/modal.css">
   <link rel="stylesheet" href="./src/styles/detail.css">
+  <link rel="stylesheet" href="./src/styles/employer.css">
+  <link rel="stylesheet" href="./src/styles/file.css">
+  <link rel="stylesheet" href="./src/styles/radio.css">
 
   <script src="./src/scripts/choices.min.js" defer></script>
   <script src="./src/scripts/script.js" defer></script>
@@ -28,122 +31,131 @@
 
 <header class="header">
   <div class="container header__container">
-    <img class="header__logo" src="./src/images/logo.svg" alt="logo Work Space">
-    <a class="header__link" href="./index.html">Посмотреть вакансии</a>
+
+    <a href="./index.html">
+      <img class="header__logo" src="./src/images/logo.svg" alt="logo Work Space">
+    </a>
+    <div class="header__links">
+      <a class="header__link" href="./index.html#vacancies">Посмотреть вакансии</a>
+    </div>
   </div>
 </header>
 
 <main>
   <section class="employer">
-    <h1 class="employer__title">Создай свою вакансию</h1>
+    <div class="container">
+      <h1 class="employer__title">Создай свою вакансию</h1>
 
-    <form class="employer__form">
-      <div class="employer__file file">
-        <div class="file__wrap-preview">
-          <img class="file__preview" src="" alt="img">
+      <form class="employer__form">
+        <div class="employer__file file">
+          <div class="file__wrap-preview">
+            <img class="file__preview" src="">
+          </div>
+          <div class="file__wrap-button">
+            <label class="file__label" for="logo">+ загрузить лого</label>
+            <input class="file__input" type="file" name="logo" id="logo" accept="image/png, image/jpeg" required>
+          </div>
         </div>
-        <div class="file__wrap-button">
-          <label class="file__label" for="logo">+ загрузить лого</label>
-          <input class="file__input" type="file" name="logo" id="logo" accept="image/png, image/jpeg">
-        </div>
-      </div>
 
-      <fieldset class="employer__fieldset-input">
-        <div class="employer__wrap-input">
-          <label class="employer__label" for="company">Название компании</label>
-          <input class="employer__input" type="text" name="company" id="company" placeholder="Например: MICROSOFT">
-        </div>
-        <div class="employer__wrap-input">
-          <label class="employer__label" for="title">Название вакансии</label>
-          <input class="employer__input" type="text" name="title" id="title"
-                 placeholder="Например: Frontend-разработчик">
-        </div>
-        <div class="employer__wrap-input">
-          <label class="employer__label" for="salary">Заработная плата, руб/мес</label>
-          <input class="employer__input" type="number" name="salary" id="salary" placeholder="80 000">
-        </div>
-        <div class="employer__wrap-input">
-          <label class="employer__label" for="location">Город</label>
-          <input class="employer__input" type="text" name="location" id="location" placeholder="Например: Москва">
-        </div>
-        <div class="employer__wrap-input">
-          <label class="employer__label" for="email">E-mail</label>
-          <input class="employer__input" type="email" name="email" id="email" placeholder="Добавьте e-mail для связи">
-        </div>
-      </fieldset>
-
-      <fieldset class="employer__fieldset-textarea">
-        <label class="employer__label" for="description">Описание вакансии</label>
-        <textarea class="employer__textarea" name="description" id="description"
-                  placeholder="Добавьте всю необходимую для соискателя информацию"></textarea>
-      </fieldset>
-
-      <div class="employer__radio-buttons">
-        <fieldset class="employer__fieldset-radio">
-          <legend class="employer__legend">Формат</legend>
-
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="format" value="Офис">Офис
-          </label>
-
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="format" value="Не важно">Не важно
-          </label>
-
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="format" value="Полная">Полная
-          </label>
+        <fieldset class="employer__fieldset employer__fieldset_input">
+          <div class="employer__wrap-input">
+            <label class="employer__label" for="company">Название компании</label>
+            <input class="employer__input" type="text" name="company" id="company" placeholder="Например: MICROSOFT">
+          </div>
+          <div class="employer__wrap-input">
+            <label class="employer__label" for="title">Название вакансии</label>
+            <input class="employer__input" type="text" name="title" id="title"
+                   placeholder="Например: Frontend-разработчик">
+          </div>
+          <div class="employer__wrap-input">
+            <label class="employer__label" for="salary">Заработная плата, руб/мес</label>
+            <input class="employer__input" type="number" name="salary" id="salary" placeholder="80 000">
+          </div>
+          <div class="employer__wrap-input">
+            <label class="employer__label" for="location">Город</label>
+            <input class="employer__input" type="text" name="location" id="location" placeholder="Например: Москва">
+          </div>
+          <div class="employer__wrap-input">
+            <label class="employer__label" for="email">E-mail</label>
+            <input class="employer__input" type="email" name="email" id="email" placeholder="Добавьте e-mail для связи">
+          </div>
         </fieldset>
 
-        <fieldset class="employer__fieldset-radio">
-          <legend class="employer__legend">Опыт работы</legend>
-
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="experience" value="Удаленный">Удаленный
-          </label>
-
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="experience" value="Без опыта">Без опыта
-          </label>
-
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="experience" value="Частичная">Частичная
-          </label>
-
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="experience" value="Гибкий">Гибкий
-          </label>
+        <fieldset class="employer__fieldset">
+          <label class="employer__label" for="description">Описание вакансии</label>
+          <textarea class="employer__textarea" name="description" id="description"
+                    placeholder="Добавьте всю необходимую для соискателя информацию"></textarea>
         </fieldset>
 
-        <fieldset class="employer__fieldset-radio">
-          <legend class="employer__legend">Занятость</legend>
+        <div class="employer__radio-buttons">
+          <fieldset class="employer__fieldset_radio">
+            <legend class="employer__legend">Формат</legend>
 
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="type" value="От 1 года до 3-х лет">От 1 года до 3-х лет
-          </label>
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="format" value="Офис">Офис
+            </label>
 
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="type" value="Стажировка">Стажировка
-          </label>
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="format" value="Не важно">Не важно
+            </label>
 
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="type" value="От 3-х лет">От 3-х лет
-          </label>
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="format" value="Полная">Полная
+            </label>
+          </fieldset>
 
-          <label class="employer__label-radio radio">
-            <input class="radio-input" type="radio" name="type" value="Проектная работа">Проектная работа
-          </label>
-        </fieldset>
-      </div>
+          <fieldset class="employer__fieldset_radio">
+            <legend class="employer__legend">Опыт работы</legend>
 
-      <div class="employer__wrap-submit">
-        <button class="employer__submit" type="submit">Добавить вакансию</button>
-        <div class="employer__error">
-          <p>Ошибка. Заполните все поля</p>
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="experience" value="Удаленный">Удаленный
+            </label>
+
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="experience" value="Без опыта">Без опыта
+            </label>
+
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="experience" value="Частичная">Частичная
+            </label>
+
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="experience" value="Гибкий">Гибкий
+            </label>
+          </fieldset>
+
+          <fieldset class="employer__fieldset_radio">
+            <legend class="employer__legend">Занятость</legend>
+
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="type" value="От 1 года до 3-х лет">От 1 года до 3-х лет
+            </label>
+
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="type" value="Стажировка">Стажировка
+            </label>
+
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="type" value="От 3-х лет">От 3-х лет
+            </label>
+
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="type" value="Проектная работа">Проектная работа
+            </label>
+          </fieldset>
+
         </div>
-      </div>
-    </form>
+
+        <div class="employer__wrap-submit">
+          <button class="employer__submit" type="submit">Добавить вакансию</button>
+          <div class="employer__error">
+            <p>Ошибка. Заполните все поля</p>
+          </div>
+        </div>
+      </form>
+    </div>
   </section>
+
 </main>
 
 <footer class="footer">
