fix: fix radio-buttons values

--- a/employer.html
+++ b/employer.html
@@ -96,11 +96,11 @@
             </label>
 
             <label class="employer__label_radio radio">
-              <input class="radio__input" type="radio" name="format" value="Не важно">Не важно
+              <input class="radio__input" type="radio" name="format" value="Удаленный">Удаленный
             </label>
 
             <label class="employer__label_radio radio">
-              <input class="radio__input" type="radio" name="format" value="Полная">Полная
+              <input class="radio__input" type="radio" name="format" value="Гибкий">Гибкий
             </label>
           </fieldset>
 
@@ -108,7 +108,7 @@
             <legend class="employer__legend">Опыт работы</legend>
 
             <label class="employer__label_radio radio">
-              <input class="radio__input" type="radio" name="experience" value="Удаленный">Удаленный
+              <input class="radio__input" type="radio" name="experience" value="Не важно">Не важно
             </label>
 
             <label class="employer__label_radio radio">
@@ -116,11 +116,11 @@
             </label>
 
             <label class="employer__label_radio radio">
-              <input class="radio__input" type="radio" name="experience" value="Частичная">Частичная
+              <input class="radio__input" type="radio" name="experience" value="От 1 года до 3-х лет">От 1 года до 3-х лет
             </label>
 
             <label class="employer__label_radio radio">
-              <input class="radio__input" type="radio" name="experience" value="Гибкий">Гибкий
+              <input class="radio__input" type="radio" name="experience" value="От 3-х лет">От 3-х лет
             </label>
           </fieldset>
 
@@ -128,15 +128,15 @@
             <legend class="employer__legend">Занятость</legend>
 
             <label class="employer__label_radio radio">
-              <input class="radio__input" type="radio" name="type" value="От 1 года до 3-х лет">От 1 года до 3-х лет
+              <input class="radio__input" type="radio" name="type" value="Полная">Полная
+            </label>
+
+            <label class="employer__label_radio radio">
+              <input class="radio__input" type="radio" name="type" value="Частичная">Частичная
             </label>
 
             <label class="employer__label_radio radio">
               <input class="radio__input" type="radio" name="type" value="Стажировка">Стажировка
-            </label>
-
-            <label class="employer__label_radio radio">
-              <input class="radio__input" type="radio" name="type" value="От 3-х лет">От 3-х лет
             </label>
 
             <label class="employer__label_radio radio">
