refactor: divide the code into modules

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="./src/styles/radio.css">
 
   <script src="./src/scripts/choices.min.js" defer></script>
-  <script src="./src/scripts/script.js" defer></script>
+  <script src="./src/scripts/script.js" type="module"></script>
 
 </head>
 <body>
