feat: add loading message

--- a/employer.html
+++ b/employer.html
@@ -49,7 +49,7 @@
       <form class="employer__form">
         <div class="employer__file file">
           <div class="file__wrap-preview">
-            <img class="file__preview" src="">
+            <img class="file__preview" src="" alt="">
           </div>
           <div class="file__wrap-button">
             <label class="file__label" for="logo">+ загрузить лого</label>
